Fixed MAJOR bug where mobile users couldnt click a button 2/3 up the screen. This was due to the navbar being invisible but still there, blocking the screen. Never code navbars like this again Daniel you stupid fuck.

--- a/css/resources.css
+++ b/css/resources.css
@@ -62,10 +62,6 @@ h2{
         margin:0 0.25em;
     }
 
-    .tabcontainer,body{/*Temp fix for the buttons not working when near the top. I dont know how on earth to fix this*/
-        margin-top:130px;
-    }
-
     .shortcontainer li{
         margin:0 0.25em;
         text-align: justify;
